--- a/filmoteka/src/app/components/header/header.component.html
+++ b/filmoteka/src/app/components/header/header.component.html
@@ -1,11 +1,22 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand">Header</a>
+  <a class="navbar-brand">Filmoteka</a>
   <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
     <div class="navbar-nav">
-      <a class="nav-item nav-link" [routerLink]="'/'" routerLinkActive="active"
+      <a *ngIf="userService.role>-1" class="nav-item nav-link" [routerLink]="'/films'" routerLinkActive="active"
         [routerLinkActiveOptions]="{ exact: true }">Films</a>
-      <a class="nav-item nav-link" [routerLink]="'/motherboard'" routerLinkActive="active">Orders</a>
-      <a class="nav-item nav-link" [routerLink]="'/processor'" routerLinkActive="active">Book</a>
+      <a *ngIf="userService.role>-1" class="nav-item nav-link" [routerLink]="'/orders'"
+        routerLinkActive="active">Orders</a>
+      <a *ngIf="userService.role>0" class="nav-item nav-link" [routerLink]="'/journal'"
+        routerLinkActive="active">Journal</a>
+      <a *ngIf="userService.role>0" class="nav-item nav-link" [routerLink]="'/addFilm'" routerLinkActive="active">Add
+        Film</a>
+      <a *ngIf="userService.role>1" class="nav-item nav-link" [routerLink]="'/addfilmRequests'"
+        routerLinkActive="active">Add
+        Requests</a>
+      <a *ngIf="userService.role===-1" class="nav-item nav-link" [routerLink]="'/register'"
+        routerLinkActive="active">Sign up</a>
+      <a *ngIf="userService.role===-1" class="nav-item nav-link" [routerLink]="'/login'"
+        routerLinkActive="active">Sign in</a>
     </div>
   </div>
 </nav>
