--- a/filmoteka/src/app/components/main/main.component.html
+++ b/filmoteka/src/app/components/main/main.component.html
@@ -1,10 +1,10 @@
-<ul>
-  <li class="text" *ngFor="let film of films | async">
-    {{film.title}}
-    <button id="deleteFilm" (click)="deleteFilm(film.id)">Удалить</button>
-  </li>
-</ul>
+<div class="row">
+  <div class="col-3" *ngFor="let film of films">
+    <!-- {{film.title}}
+    <button id="deleteFilm" (click)="deleteFilm(film.id)">Удалить</button> -->
+    <app-film-card [film]="film" (refresh) ="ngOnInit()"></app-film-card>
+  </div>
+</div>
 <input type="text" name="" id="filmTitle" [(ngModel)]="filmTitle">
 <button id="addFilm" (click)="addFilm()">Добавить фильм</button>
-<button id="editFilm" (click)="editFilm()">Изменить</button>
 
