--- a/filmoteka/src/app/components/film-card/film-card.component.html
+++ b/filmoteka/src/app/components/film-card/film-card.component.html
@@ -3,8 +3,7 @@
   <div class="card-body">
     <h5 class="card-title">{{film.payload.doc.data().title}}</h5>
     <p class="card-text">Info</p>
-    <a href="#" class="btn btn-primary">BTN</a>
-    <button *ngIf="user.role===2" id="deleteFilm" (click)="deleteFilm()">Удалить</button>
-    <button *ngIf="user.role===2" id="editFilm" (click)="editFilm()">Изменить</button>
+    <button *ngIf="user.role===2" class="btn btn-danger" id="deleteFilm" (click)="deleteFilm()">Удалить</button>
+    <button *ngIf="user.role===2" class="btn btn-primary" id="editFilm" (click)="editFilm()">Изменить</button>
   </div>
 </div>
