--- a/filmoteka/src/app/components/film-card/film-card.component.html
+++ b/filmoteka/src/app/components/film-card/film-card.component.html
@@ -4,6 +4,6 @@
     <h5 class="card-title">{{film.payload.doc.data().title}}</h5>
     <p class="card-text">Info</p>
     <button *ngIf="user.role===2" class="btn btn-danger" id="deleteFilm" (click)="deleteFilm()">Удалить</button>
-    <button *ngIf="user.role===2" class="btn btn-primary" id="editFilm" (click)="editFilm()">Изменить</button>
+    <a *ngIf="user.role===2" class="btn btn-primary" id="editFilm" [routerLink]="['/edit_film', film.payload.doc.id]">Изменить</a>
   </div>
 </div>
