--- a/filmoteka/src/app/components/header/header.component.html
+++ b/filmoteka/src/app/components/header/header.component.html
@@ -2,15 +2,15 @@
   <a class="navbar-brand">Filmoteka</a>
   <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
     <div class="navbar-nav">
-      <a *ngIf="userService.user.role>-1" class="nav-item nav-link" [routerLink]="'/films'" routerLinkActive="active"
+      <a *ngIf="userService.user.role>-1" class="nav-item nav-link" [routerLink]="'/'" routerLinkActive="active"
         [routerLinkActiveOptions]="{ exact: true }">Films</a>
       <a *ngIf="userService.user.role>-1" class="nav-item nav-link" [routerLink]="'/orders'"
         routerLinkActive="active">Orders</a>
       <a *ngIf="userService.user.role>0" class="nav-item nav-link" [routerLink]="'/journal'"
         routerLinkActive="active">Journal</a>
-      <!-- <a *ngIf="userService.user.role>0" class="nav-item nav-link" [routerLink]="'/editFilm'"
+      <a *ngIf="userService.user.role>0" class="nav-item nav-link" [routerLink]="'/edit_film/-1'"
         routerLinkActive="active">Add
-        Film</a> -->
+        Film</a>
       <a *ngIf="userService.user.role>1" class="nav-item nav-link" [routerLink]="'/addfilmRequests'"
         routerLinkActive="active">Add
         Requests</a>
