--- a/filmoteka/src/app/components/header/header.component.html
+++ b/filmoteka/src/app/components/header/header.component.html
@@ -4,15 +4,17 @@
     <div class="navbar-nav">
       <a *ngIf="userService.user.role>-1" class="nav-item nav-link" [routerLink]="'/'" routerLinkActive="active"
         [routerLinkActiveOptions]="{ exact: true }">Films</a>
-      <a *ngIf="userService.user.role>-1" class="nav-item nav-link" [routerLink]="'/orders'"
+      <a *ngIf="userService.user.role===0" class="nav-item nav-link" [routerLink]="'/orders'"
         routerLinkActive="active">Orders</a>
       <a *ngIf="userService.user.role>0" class="nav-item nav-link" [routerLink]="'/journal'"
         routerLinkActive="active">Journal</a>
-      <a *ngIf="userService.user.role>0" class="nav-item nav-link" [routerLink]="'/edit_film/-1'"
+      <a *ngIf="userService.user.role===2" class="nav-item nav-link" [routerLink]="'/edit_film/-1'"
         routerLinkActive="active">Add
         Film</a>
-      <a *ngIf="userService.user.role>1" class="nav-item nav-link" [routerLink]="'/addfilmRequests'"
+      <a *ngIf="userService.user.role===1" class="nav-item nav-link" [routerLink]="'/edit_film/0'"
         routerLinkActive="active">Add
+        Request</a>
+      <a *ngIf="userService.user.role>1" class="nav-item nav-link" [routerLink]="'/requests'" routerLinkActive="active">
         Requests</a>
       <a *ngIf="userService.user.role===-1" class="nav-item nav-link" [routerLink]="'/register'"
         routerLinkActive="active">Sign up</a>
