--- a/filmoteka/src/app/components/journal/journal.component.html
+++ b/filmoteka/src/app/components/journal/journal.component.html
@@ -1,13 +1,12 @@
-<table class="table">
+<table class="table" style="color: aliceblue;">
   <thead>
     <tr>
       <th scope="col">#</th>
-      <th>Films</th>
+      <th>Фильмы</th>
     </tr>
   </thead>
   <tbody>
     <tr *ngFor="let order of orders">
-      <td>{{order.id}}</td>
       <td><span *ngFor="let film of order.films">{{film.title}}, </span></td>
     </tr>
   </tbody>
