--- a/filmoteka/src/app/components/login/login.component.html
+++ b/filmoteka/src/app/components/login/login.component.html
@@ -1,15 +1,16 @@
 <form id="regForm" [formGroup]="loginForm" (ngSubmit)="onSubmit()">
     <div class="form-group">
-      <label for="exampleInputEmail1">Email address</label>
+      <label for="exampleInputEmail1">Email</label>
       <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
-        placeholder="Enter email" formControlName="login">
-      <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+        placeholder="Email" formControlName="login">
+      <small id="emailHelp" class="form-text text-muted"
+      style="color: gainsboro;">Мы не будем разглашать ваши персональные данные.</small>
     </div>
     <div class="form-group">
-      <label for="exampleInputPassword1">Password</label>
-      <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password"
+      <label for="exampleInputPassword1">Пароль</label>
+      <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Пароль"
         formControlName="password">
     </div>
-    <button type="submit" class="btn btn-primary">Sign in</button>
+    <button type="submit" class="btn btn-primary">Войти</button>
   </form>
   
