--- a/filmoteka/src/app/components/edit-film/edit-film.component.html
+++ b/filmoteka/src/app/components/edit-film/edit-film.component.html
@@ -10,8 +10,12 @@
     <input type="text" class="form-control" id="filmTitle" placeholder="Название фильма" formControlName="title">
   </div>
   <div class="form-group">
-    <label for="filmGenre">Год, жанр</label>
+    <label for="filmGenre">Жанр</label>
     <input type="text" class="form-control" id="filmGenre" placeholder="Жанр" formControlName="genre">
+  </div>
+  <div class="form-group">
+    <label for="filmYear">Год</label>
+    <input type="text" class="form-control" id="filmYear" placeholder="Год" formControlName="year">
   </div>
   <div class="form-group">
     <label for="filmCount">Количество</label>
@@ -19,7 +23,8 @@
   </div>
   <div class="form-group">
     <label for="filmDesc">Описание</label>
-    <input type="text" class="form-control" id="filmDesc" placeholder="Описание" formControlName="desc">
+    <textarea   type="text" class="form-control" placeholder="Описание" formControlName="desc" 
+    id="filmDesc" formControlName="desc"> </textarea>
   </div>
   <div class="form-group">
     <label for="filmDirector">Режиссёр</label>
