--- a/filmoteka/src/app/components/film-card/film-card.component.css
+++ b/filmoteka/src/app/components/film-card/film-card.component.css
@@ -1,3 +1,62 @@
 /*div.card{
     background-color: rgba(0, 120, 201, 0.7);
 }*/
+img {
+  border-radius: 15px;
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+
+}
+
+.flip-card {
+  padding: 10px;
+  margin-top: 10px;
+  background-color: transparent;
+  width: 90%;
+  height: 450px;
+  perspective: 1000px;
+  /* Remove this if you don't want the 3D effect */
+}
+
+/* This container is needed to position the front and back side */
+.flip-card-inner {
+  position: relative;
+  cursor: pointer;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  transition: transform 0.8s;
+  transform-style: preserve-3d;
+}
+
+/* Do an horizontal flip when you move the mouse over the flip box container */
+.flip-card:hover .flip-card-inner {
+  transform: rotateY(180deg);
+}
+
+/* Position the front and back side */
+.flip-card-front,
+.flip-card-back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  -webkit-backface-visibility: hidden;
+  /* Safari */
+  backface-visibility: hidden;
+}
+
+/* Style the front side (fallback if image is missing) */
+.flip-card-front {
+  background-color: #bbb;
+  border-radius: 15px;
+  color: black;
+}
+
+/* Style the back side */
+.flip-card-back {
+  background-color: rgba(255, 192, 203, 0.469);
+  border-radius: 15px;
+  color: white;
+  transform: rotateY(180deg);
+}
