--- a/filmoteka/src/app/components/film-card/film-card.component.html
+++ b/filmoteka/src/app/components/film-card/film-card.component.html
@@ -1,17 +1,37 @@
-<div class="card" style="width: 18rem; margin: 10px; padding: 10px; border-radius: 10px; 
-background: rgba(0, 0, 0, 0.3) ; color: aliceblue; " >
-  <img class="card-img-top" src={{film.image}} alt="Card image cap" style="
-   border-radius: 15px">
+<!-- <div class="card" style="width: 18rem; margin: 10px; padding: 10px; border-radius: 10px; 
+background: rgba(0, 0, 0, 0.3) ; color: aliceblue; ">
+  <a [routerLink]="['/info', film.id]"><img class="card-img-top" src={{film.image}} alt="Card image cap"></a>
   <div class="card-body">
     <h5 class="card-title">{{film.title}}</h5>
     <p class="card-text">{{film.year}}, {{film.genre}}</p>
     <p>
-    <a *ngIf="user.role===2" class="btn btn-primary" id="editFilm" [routerLink]="['/edit_film', film.id]">Информация</a>
-  </p> <p>
-    <button *ngIf="user.role===2" class="btn btn-danger" id="deleteFilm" (click)="deleteFilm()"
-    style="margin-right: 10px;">Удалить</button>
-    
-    <a *ngIf="user.role===2" class="btn btn-primary" id="editFilm" [routerLink]="['/edit_film', film.id]">Изменить</a>
+      <a *ngIf="user.role===2" class="btn btn-primary" id="editFilm" [routerLink]="['/info', film.id]">Информация</a>
     </p>
+    <p>
+      <button *ngIf="user.role===2" class="btn btn-danger" id="deleteFilm" (click)="deleteFilm()"
+        style="margin-right: 10px;">Удалить</button>
+
+      <a *ngIf="user.role===2" class="btn btn-primary" id="editFilm" [routerLink]="['/edit_film', film.id]">Изменить</a>
+    </p>
+  </div>
+</div> -->
+
+<div class="flip-card">
+  <div class="flip-card-inner" (click) = 'filmCardClick()'>
+    <div class="flip-card-front">
+      <a [routerLink]="['/info', film.id]"><img class="" src={{film.image}} alt="Card image cap"></a>
+    </div>
+    <div class="flip-card-back d-flex flex-column justify-content-center" >
+      <h5 class="card-title">{{film.title}}</h5>
+      <p class="card-text">{{film.year}} год, {{film.genre}}</p>
+      <p>Режиссер: {{film.director}}</p>
+      <p>
+        <button *ngIf="user.role===2" class="btn btn-danger" id="deleteFilm" (click)="deleteFilm()"
+          style="margin-right: 10px;">Удалить</button>
+
+        <a *ngIf="user.role===2" class="btn btn-primary" id="editFilm"
+          [routerLink]="['/edit_film', film.id]">Изменить</a>
+      </p>
+    </div>
   </div>
 </div>
