--- a/filmoteka/src/app/components/login/login.component.html
+++ b/filmoteka/src/app/components/login/login.component.html
@@ -1,16 +1,17 @@
-<form id="regForm" [formGroup]="loginForm" (ngSubmit)="onSubmit()">
+<div class=" d-flex justify-content-center form-container">
+  <form id="regForm" [formGroup]="loginForm" (ngSubmit)="onSubmit()" class="col col-5 border border-light login-form">
     <div class="form-group">
       <label for="exampleInputEmail1">Email</label>
-      <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
-        placeholder="Email" formControlName="login">
-      <small id="emailHelp" class="form-text text-muted"
-      style="color: gainsboro;">Мы не будем разглашать ваши персональные данные.</small>
+      <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Email"
+        formControlName="login">
     </div>
     <div class="form-group">
       <label for="exampleInputPassword1">Пароль</label>
       <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Пароль"
         formControlName="password">
     </div>
-    <button type="submit" class="btn btn-primary">Войти</button>
+    <div class="buttons-container">
+      <button type="submit" class="btn btn-primary float-right">Войти</button>
+    </div>
   </form>
-  
+</div>
