--- a/src/app/components/film-card/film-card.component.html
+++ b/src/app/components/film-card/film-card.component.html
@@ -8,10 +8,10 @@
       <p class="card-text">{{film.year}} год, {{film.genre}}</p>
       <p>Режиссер: {{film.director}}</p>
       <p>
-        <button *ngIf="user.role===2" class="btn btn-danger" id="deleteFilm" (click)="deleteFilm($event)"
+        <button *ngIf="role===2" class="btn btn-danger" id="deleteFilm" (click)="deleteFilm($event)"
           style="margin-right: 10px;">Удалить</button>
 
-        <a *ngIf="user.role===2" class="btn btn-primary" id="editFilm"
+        <a *ngIf="role===2" class="btn btn-primary" id="editFilm"
           [routerLink]="['/edit_film', film.id]">Изменить</a>
       </p>
     </div>
