--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -1,5 +1,23 @@
+<form [formGroup]="searchForm"
+      class="d-flex flex-column justify-content-center flex-wrap pt-10">
+  <div class="form-group w-100 search">
+    <input formControlName="search" class="form-control" placeholder="Название фильма">
+  </div>
+  <div class="form-group d-flex justify-content-start align-items-center">
+    <label for="genre" class="genre">Жанр</label>
+    <select formControlName="genre" class="form-control w-25" id="genre">
+      <option value="Любой">Любой</option>
+      <option value="Триллер">Триллер</option>
+      <option value="Комедия">Комедия</option>
+      <option value="Ужасы">Ужасы</option>
+      <option value="Боевик">Боевик</option>
+      <option value="Драма">Драма</option>
+    </select>
+  </div>
+</form>
 <div class="d-flex flex-wrap">
-  <div *ngFor="let film of films">
-    <app-film-card [film]="film" (refresh) ="ngOnInit()"></app-film-card>
+  <div *ngFor="let film of films | filmFilter : searchForm.get('search').value
+      : searchForm.get('genre').value">
+    <app-film-card [film]="film" (refresh)="ngOnInit()"></app-film-card>
   </div>
 </div>
