--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -3,21 +3,37 @@
   <div class="form-group w-100 search">
     <input formControlName="search" class="form-control" placeholder="Название фильма">
   </div>
-  <div class="form-group d-flex justify-content-start align-items-center">
-    <label for="genre" class="genre">Жанр</label>
-    <select formControlName="genre" class="form-control w-25" id="genre">
-      <option value="Любой">Любой</option>
-      <option value="Триллер">Триллер</option>
-      <option value="Комедия">Комедия</option>
-      <option value="Ужасы">Ужасы</option>
-      <option value="Боевик">Боевик</option>
-      <option value="Драма">Драма</option>
-    </select>
+  <div class="form-group d-flex justify-content-start align-items-center flex-wrap">
+    <div class="param">
+      <label for="genre">Жанр</label>
+      <select formControlName="genre" class="form-control select" id="genre">
+        <option value="Любой">Любой</option>
+        <option value="Триллер">Триллер</option>
+        <option value="Комедия">Комедия</option>
+        <option value="Ужасы">Ужасы</option>
+        <option value="Боевик">Боевик</option>
+        <option value="Драма">Драма</option>
+      </select>
+    </div>
+    <div class="param">
+      <label for="rating">Поле для сортировки</label>
+      <select formControlName="sort" class="form-control  select" id="rating">
+        <option value="rating">Рейтинг</option>
+        <option value="year">Год выпуска</option>
+      </select>
+    </div>
+    <div class="param">
+      <label for="rating">Направление сортировки</label>
+      <select formControlName="direction" class="form-control  select" id="year">
+        <option value="down">По убыванию</option>
+        <option value="up">По возрастанию</option>
+      </select>
+    </div>
   </div>
 </form>
-<div class="d-flex flex-wrap">
+<div class="d-flex flex-wrap justify-content-center justify-content-lg-start">
   <div *ngFor="let film of films | filmFilter : searchForm.get('search').value
-      : searchForm.get('genre').value">
+      : searchForm.get('genre').value: searchForm.get('sort').value : searchForm.get('direction').value">
     <app-film-card [film]="film" (refresh)="ngOnInit()"></app-film-card>
   </div>
 </div>
