--- a/src/app/components/edit-film/edit-film.component.html
+++ b/src/app/components/edit-film/edit-film.component.html
@@ -1,5 +1,5 @@
-<div class=" d-flex justify-content-center form-container">
-  <form id="regForm" [formGroup]="filmForm" class="col col-5  border border-light">
+<div class="d-flex justify-content-center form-container">
+  <form id="regForm" [formGroup]="filmForm">
     <div class="form-group">
       <label for="filmImage">Картинка</label>
       <input type="text" class="form-control" id="filmImage" placeholder="Ссылка на картинку" formControlName="image">
