--- a/src/app/components/order-form/order-form.component.html
+++ b/src/app/components/order-form/order-form.component.html
@@ -1,5 +1,5 @@
 <div class=" d-flex justify-content-center form-container">
-  <form id="regForm" [formGroup]="orderForm" class="col col-5  border border-light p-2" (submit)="onSumbit()">
+  <form id="regForm" [formGroup]="orderForm" class="" (submit)="onSumbit()">
     <div class="form-group">
       <label for="client">ФИО</label>
       <input type="text" class="form-control" id="client" placeholder="Иванов И.И." formControlName="client">
