--- a/src/app/components/film-info/film-info.component.css
+++ b/src/app/components/film-info/film-info.component.css
@@ -2,8 +2,13 @@
     margin: 10px 20px 0px 20px;
 }
 
+.poster-img{
+  width: 100%;
+  min-width: 300px;
+}
+
 .desc{
-    padding:20px 0 0 0 ;
+    padding:20px 0 0 0;
     font-size: 18px;
 }
 
