--- a/src/app/components/film-info/film-info.component.html
+++ b/src/app/components/film-info/film-info.component.html
@@ -1,16 +1,16 @@
-<div calss='flex justify-content-center'>
-  <div class="float-left poster text-center">
-    <img src="{{film.image}}" class="rounded" alt="...">
+<div class='d-flex justify-content-start flex-column flex-lg-row'>
+  <div class="poster text-center">
+    <img src="{{film.image}}" class="rounded poster-img" alt="...">
     <p class="">{{film.year}} год, {{film.genre}}</p>
   </div>
-  <div class="d-flex p-2 flex-column justify-content-between">
+  <div class="d-flex p-2 flex-column">
     <h2>{{film.title}}</h2>
-    <p class='col-7 desc'>{{film.desc}}</p>
+    <p class='desc w-75'>{{film.desc}}</p>
     <p *ngIf='film.actor'>В главных ролях: {{film.actor}}</p>
     <p>Режиссер: {{film.director}}</p>
     <p>Рейтинг: {{film.rating}}</p>
     <p>Количество: {{film.count}} шт.</p>
-    <div>
+    <div *ngIf="userService.getUserRole===0">
       <button class="btn btn-primary" (click)="onOrderClick()">Сделать заказ</button>
     </div>
   </div>
