--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,5 +1,5 @@
 <div class=" d-flex justify-content-center form-container">
-  <form id="regForm" [formGroup]="loginForm" (ngSubmit)="onSubmit()" class="col col-5 border border-light login-form">
+  <form id="regForm" [formGroup]="loginForm" (ngSubmit)="onSubmit()" class="login-form">
     <div class="form-group">
       <label for="exampleInputEmail1">Email</label>
       <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Email"
@@ -11,7 +11,7 @@
         formControlName="password">
     </div>
     <div class="buttons-container">
-      <button type="submit" class="btn btn-primary float-right">Войти</button>
+      <button type="submit" class="btn btn-primary w-100">Войти</button>
     </div>
   </form>
 </div>
