--- a/src/app/components/orders/orders.component.html
+++ b/src/app/components/orders/orders.component.html
@@ -1,16 +1,18 @@
-<table class="table">
-  <thead>
-  <tr>
-    <th scope="col">#</th>
-    <th>Фильм</th>
-    <th>Статус</th>
-  </tr>
-  </thead>
-  <tbody>
-  <tr *ngFor="let order of orders">
-    <td>{{order.id}}</td>
-    <td><span>{{order.film}}</span></td>
-    <td>{{getStatus(order.status)}}</td>
-  </tr>
-  </tbody>
-</table>
+<div class="table-responsive">
+  <table class="table">
+    <thead>
+    <tr>
+      <th scope="col">#</th>
+      <th>Фильм</th>
+      <th>Статус</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr *ngFor="let order of orders">
+      <td>{{order.id}}</td>
+      <td><span>{{order.film}}</span></td>
+      <td>{{getStatus(order.status)}}</td>
+    </tr>
+    </tbody>
+  </table>
+</div>
