--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -1,17 +1,17 @@
 <div class=" d-flex justify-content-center form-container">
-  <form id="regForm" [formGroup]="regForm" (ngSubmit)="onSubmit()" class="col col-5 border border-light login-form">
+  <form id="regForm" [formGroup]="regForm" (ngSubmit)="onSubmit()" class="login-form">
     <div class="form-group">
       <label for="exampleInputEmail1">Email</label>
       <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Email"
-        formControlName="login">
+             formControlName="login">
     </div>
     <div class="form-group">
       <label for="exampleInputPassword1">Пароль</label>
       <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Пароль"
-        formControlName="password">
+             formControlName="password">
     </div>
     <div class="buttons-container">
-      <button type="submit" class="btn btn-primary float-right">Войти</button>
+      <button type="submit" class="btn btn-primary w-100">Зарегистрироваться</button>
     </div>
   </form>
 </div>
