--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 body {
-    background: linear-gradient(90deg, rgb(0, 153, 255) 0%, rgb(255, 85, 170) 100%);
-    color: aliceblue;
-    }
+  background: linear-gradient(90deg, rgb(0, 153, 255) 0%, rgb(255, 85, 170) 100%);
+  color: aliceblue;
+  overflow-x: hidden;
+}
